<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <packaging>war</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.2</version>
  </parent>

  <name>cPath2</name>
  <groupId>pathwaycommons</groupId>
  <artifactId>cpath2</artifactId>
  <version>14</version>
  <description>Bio pathways/interactions integration and service (using BioPAX and Paxtools)</description>
  <url>https://pathwaycommons.github.io/cpath2</url>
  <inceptionYear>2009</inceptionYear>

  <properties>
    <start-class>cpath.Application</start-class>
    <license.licenseName>MIT</license.licenseName>
    <github.global.server>github</github.global.server>
    <paxtools.version>6.0.0-SNAPSHOT</paxtools.version>
    <validator.version>6.0.0-SNAPSHOT</validator.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <lucene.version>9.7.0</lucene.version>
    <jvm.options>-Xmx3g -Dfile.encoding=UTF-8 -ea --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</jvm.options>
    <agent>${settings.localRepository}/org/springframework/spring-instrument/${spring-framework.version}/spring-instrument-${spring-framework.version}.jar</agent>
    <!-- this copy is created by maven-dependency-plugin -->
<!--    <agent>target/spring-instrument.jar</agent>-->
  </properties>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/PathwayCommons/cpath2/issues</url>
  </issueManagement>

  <ciManagement>
    <system>GitHub</system>
    <url>https://github.com/PathwayCommons/cpath2/actions/workflows/maven.yml</url>
  </ciManagement>

  <organization>
    <name>Pathway Commons</name>
    <url>https://www.pathwaycommons.org</url>
  </organization>

  <scm>
    <connection>scm:git:git://github.com/PathwayCommons/cpath2.git</connection>
    <developerConnection>scm:git:git@github.com:PathwayCommons/cpath2.git</developerConnection>
    <url>https://github.com/PathwayCommons/cpath2/tree/master/</url>
  </scm>

  <developers>
    <developer>
      <id>rodche</id>
      <name>Igor Rodchenkov</name>
      <organization>The Donnelly Centre, University of Toronto</organization>
      <roles>
        <role>Architect</role>
      </roles>
    </developer>
    <developer>
      <id>ozgunbabur</id>
      <name>Ozgun Babur</name>
      <organization>OHSU</organization>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Benjamin Gross</name>
      <organization>DFCI</organization>
    </contributor>
    <contributor>
      <name>Emek Demir</name>
      <organization>OHSU</organization>
    </contributor>
    <contributor>
      <name>B. Arman Aksoy</name>
    </contributor>
    <contributor>
      <name>Ethan Cerami</name>
      <organization>DFCI</organization>
    </contributor>
    <contributor>
      <name>Nadia Anwar</name>
    </contributor>
    <contributor>
      <name>Onur Sumer</name>
      <organization>MSKCC</organization>
    </contributor>
    <contributor>
      <name>Harold Rodriguez</name>
      <organization>The Donnelly Centre, UofT</organization>
    </contributor>
    <contributor>
      <name>Gary Bader</name>
      <organization>The Donnelly Centre, UofT</organization>
      <roles>
        <role>PI</role>
      </roles>
    </contributor>
    <contributor>
      <name>Chris Sander</name>
      <organization>DFCI,HMS</organization>
    </contributor>
    <contributor>
      <name>Augustin Luna</name>
      <organization>DFCI</organization>
    </contributor>
    <contributor>
      <name>Jeffrey Wong</name>
      <organization>UofT</organization>
    </contributor>
  </contributors>

  <mailingLists>
    <mailingList>
      <name>Pathway Commons Development Group</name>
      <post>pathway-commons-dev@googlegroups.com</post>
    </mailingList>
  </mailingLists>

  <licenses>
    <license>
      <name>MIT license</name>
      <url>https://raw.githubusercontent.com/PathwayCommons/cpath2/master/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <repositories>
    <repository>
      <id>ossrh</id>
      <name>OSSRH Repository</name>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>ebi-repo</id>
      <name>The EBI internal repository</name>
      <url>https://www.ebi.ac.uk/~maven/m2repo</url>
    </repository>
    <repository>
      <id>intact.nexus</id>
      <name>IntAct Nexus</name>
      <url>https://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
    </repository>
  </repositories>

  <build>
    <finalName>cpath2</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>${jvm.options}</argLine>
          <systemPropertyVariables>
            <CPATH2_HOME>target/work</CPATH2_HOME>
          </systemPropertyVariables>
          <useSystemClassLoader>false</useSystemClassLoader>
          <runOrder>alphabetical</runOrder>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>${jvm.options} -javaagent:${agent}</argLine>
          <systemPropertyVariables>
            <CPATH2_HOME>target/work</CPATH2_HOME>
          </systemPropertyVariables>
          <useSystemClassLoader>false</useSystemClassLoader>
          <runOrder>alphabetical</runOrder>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.spotify</groupId>
        <artifactId>dockerfile-maven-plugin</artifactId>
        <version>1.4.13</version>
        <configuration>
          <repository>pathwaycommons/cpath2</repository>
          <buildArgs>
            <APP_JAR>target/${project.build.finalName}.war</APP_JAR>
          </buildArgs>
        </configuration>
        <executions>
          <execution>
            <id>docker-image</id>
            <phase>deploy</phase>
            <goals>
              <goal>build</goal>
              <goal>tag</goal>
              <goal>push</goal>
            </goals>
            <configuration>
              <tag>${project.version}</tag>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <mainClass>${start-class}</mainClass>
          <jvmArguments>${jvm.options} -Dpaxtools.model.safeset=list -Dpaxtools.normalizer.use-latest-registry=true</jvmArguments>
          <agents>
            <agent>${agent}</agent>
          </agents>
          <arguments>-s</arguments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <id>copy-spring-instrument-jar</id>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-instrument</artifactId>
                  <type>jar</type>
                  <destFileName>spring-instrument.jar</destFileName>
                  <outputDirectory>${project.build.directory}</outputDirectory>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${project.build.directory}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
<!--    <dependency>-->
<!--      <groupId>org.springframework.boot</groupId>-->
<!--      <artifactId>spring-boot-properties-migrator</artifactId>-->
<!--      <scope>runtime</scope>-->
<!--    </dependency>-->
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>2.0.1.Final</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>paxtools-core</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>
    <dependency>
      <groupId>jakarta.activation</groupId>
      <artifactId>jakarta.activation-api</artifactId>
      <version>2.1.2</version>
    </dependency>
    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>4.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>4.0.3</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>psimi-converter</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>sbgn-converter</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>gsea-converter</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>paxtools-query</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>pattern</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>normalizer</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.validator</groupId>
      <artifactId>biopax-validator</artifactId>
      <version>${validator.version}</version>
    </dependency>
    <dependency>
      <groupId>org.biopax.paxtools</groupId>
      <artifactId>json-converter</artifactId>
      <version>${paxtools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.8.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.10.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>${lucene.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-highlighter</artifactId>
      <version>${lucene.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-queryparser</artifactId>
      <version>${lucene.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-analysis-common</artifactId>
      <version>${lucene.version}</version>
    </dependency>
    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jul-to-slf4j</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <!-- due to org.obo in biopax-validator uses log4j impl -->
      <groupId>org.slf4j</groupId>
      <artifactId>log4j-over-slf4j</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <scope>runtime</scope>
    </dependency>
    <!--Spring Boot, JPA, Validation API, Jackson, etc.-->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
    </dependency>
    <!--jackson-databind allows to use JAXB annotations for converting beans to JSON -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.yaml</groupId>
          <artifactId>snakeyaml</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet.jsp.jstl</groupId>
      <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
      <version>3.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.web</groupId>
      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <!-- to enable JSP -->
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-jasper</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.2.0</version>
      <exclusions>
        <exclusion>
          <groupId>org.yaml</groupId>
          <artifactId>snakeyaml</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.30</version>
    </dependency>
  </dependencies>

</project>
